# semanticbrowser

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  404.html  BEST_PRACTICES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCKER-SETUP-SUMMARY.md  DOCKER.md  Dockerfile  Dockerfile.test  LICENSE  Makefile  PLANNING_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  SPRINT_PLAN.md  START_HERE.md  START_HERE_v0.1.3.md  TESTING.md  clippy.toml  docker-compose.test.yml  docker-compose.yml  index.html  mkdocs.yml  rust-toolchain.toml  rustfmt.toml  sitemap.xml  test_ollama_integration.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/issue_templates/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  docs.yml  release.yml  security.yml
api/: index.html
benches/: parsing_benchmark.rs
config/: README.md
data/kg/: README.md
developer-guide/architecture/: index.html
developer-guide/contributing/: index.html
developer-guide/mcp-extension-guide/: index.html
developer-guide/performance-tuning/: index.html
developer-guide/production-deployment/: index.html
developer-guide/testing/: index.html
docker/: .dockerbuildxignore  .dockerignore  .env.dev  Dockerfile  Dockerfile.dev  README.dev.md  docker-compose.dev.yml  docker-compose.yml
docker/scripts/: docker-build.sh  docker-builder-setup.sh  docker-dev.sh  docker-test.sh  docker-up.sh  verify-dockerfile-syntax.sh
docs/: BROWSER_INTEGRATION_COMPLETE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_ANALYSIS.md  DEVELOPMENT.md  IMPLEMENTATION_STATUS.md  INTEGRATION_ANALYSIS.md  LLM_AGENT_ROADMAP.md  ML_SETUP.md  NEW_FEATURES_2025.md  PHASE1_SUMMARY.md  README.md  SECURITY.md  STREAMING_GUIDE.md  TEST_SUMMARY.md  index.md
docs/api/: README.md
docs/architecture/: README.md
docs/developer-guide/: ARCHITECTURE_BEST_PRACTICES.md  architecture.md  contributing.md  docker-development.md  mcp-extension-guide.md  performance-tuning.md  production-deployment.md
docs/development/: contributing.md  mcp-extension-guide.md
docs/examples/: README.md  browse_url.sh  metrics_demo.sh  parse_html.sh  query_kg.sh
docs/guides/: authentication.md  browser-automation.md  docker-setup.md  quickstart.md  testing.md
docs/internal/: IMPLEMENTATION_STATUS.md  LLM_AGENT_TESTING_ROADMAP.md  LLM_ORCHESTRATION_ANALYSIS.md  NAVIGATION_GAPS.md  NEW_FEATURES_2025.md  PHASE1.5_COMPLETE.md  PHASE1_COMPLETE.md  SPRINT1_SUMMARY.md  TEST_SUMMARY.md
docs/reference/: authentication.md  changelog.md  configuration.md  ml-configuration.md  ml-models.md  ml-onnx-guide.md  observability.md  seccomp.md  security.md
docs/user-guide/: browser-automation.md  core-operations.md  docker-setup.md  environment-variables.md  quickstart.md
docs/user-guide/examples/: README.md  browse_url.sh  browser-workflow.sh  kg-ml-inference.sh  langgraph_workflow.sh  ner-bert-workflow.sh  parse_html.sh  query_kg.sh  workflow_demo.py
examples/: README.md  agent_browser_example.rs  agent_openai_example.rs  agent_simple_task.rs  agent_smart_form_example.rs  agent_with_browser.rs  agent_with_ml.rs  anthropic_streaming_example.rs  api_client_example.rs  form_login_example.rs  multi_tab_example.rs  smart_form_example.rs  streaming_example.rs  vision_example.rs  workflow_example.rs
internal/IMPLEMENTATION_STATUS/: index.html
internal/NEW_FEATURES_2025/: index.html
internal/SPRINT1_SUMMARY/: index.html
internal/TEST_SUMMARY/: index.html
models/: README.md
reference/authentication/: index.html
reference/changelog/: index.html
reference/code-of-conduct/: index.html
reference/configuration/: index.html
reference/ml-models/: index.html
reference/ml-onnx-guide/: index.html
reference/observability/: index.html
reference/seccomp/: index.html
reference/security/: index.html
scripts/: docker-build.sh  docker-builder-setup.sh  docker-test.sh  docker-up.sh  run-coverage.sh  test_agent.sh  verify-dockerfile-syntax.sh
search/: search_index.json
src/: annotator.rs  api.rs  api_client.rs  auth.rs  auth_manager.rs  browser.rs  external.rs  form_analyzer.rs  form_interaction.rs  kg.rs  kg_integration.rs  lib.rs  main.rs  models.rs  parser.rs  security.rs  smart_form_filler.rs
src/llm/: README.md  agent.rs  anthropic.rs  browser_executor.rs  mod.rs  ollama.rs  openai.rs  provider.rs  tools.rs  workflow.rs
src/ml/: embeddings.rs  inference.rs  mod.rs
src/observability/: metrics.rs  mod.rs
tests/: browser_test.rs  core_workflow.rs  fuzz_tests.rs  integration_test.rs  integration_tests.rs  kg_integration_test.rs  llm_anthropic.rs  llm_openai.rs  proptest_tests.proptest-regressions  proptest_tests.rs  stress_tests.rs
user-guide/browser-automation/: index.html
user-guide/core-operations/: index.html
user-guide/docker-setup/: index.html
user-guide/examples/: index.html  mcp-client-integration.sh  token_revocation.sh
user-guide/quickstart/: index.html
xtask/: Cargo.toml  mcp-manifest.json
xtask/src/: main.rs
